Fri Aug 29 16:18:26 2014  Eric Wong  <e@80x24.org>

	* string.c: revert part of r47311, add rb_vm_fstring_table(),
	  remove vm_core.h dependency. [ruby-core:64627]

Fri Aug 29 15:17:13 2014  Eric Wong  <e@80x24.org>

	* string.c: remove static frozen_strings
	* string.c (Init_frozen_strings): new function
	* string.c (rb_fstring): remove check for frozen strings,
	  use per-VM table
	* string.c (rb_str_free): use per-VM table
	* string.c (Init_String): use per-VM table
	* vm_core.h (rb_vm_t): add frozen_strings table
	* internal.h (Init_frozen_strings): new function prototype
	* eval.c (ruby_setup): call Init_frozen_strings
	  [Feature #10182]

Wed Aug 27 23:10:24 2014  Masaki Matsushita <glass.saga@gmail.com>

	* lib/tempfile.rb: remove "require 'thread'". its features are no
	  longer used.

Wed Aug 27 21:19:40 2014  gogo tanaka  <mail@tanakakazuki.com>

	* lib/drb/acl.rb: Removed meaningless #to_s methods in interpolation.
	  [Feature #10174][ruby-core:64584]
	* lib/erb.rb: ditto.
	* lib/observer.rb: ditto.
	* lib/rake/invocation_chain.rb: ditto.
	* lib/rubygems/command_manager.rb: ditto.
	* lib/rubygems/config_file.rb: ditto.
	* lib/uri/common.rb: ditto.

Wed Aug 27 21:08:20 2014  gogo tanaka  <mail@tanakakazuki.com>

	* lib/drb/drb.rb: use attr_reader instead of Module#attr.
	  [Feature #10172][ruby-core:64582]
	* lib/irb/ruby-token.rb: ditto.
	* lib/net/telnet.rb: ditto.
	* lib/rdoc/ruby_token.rb: ditto.
	* lib/thwait.rb: ditto.

Wed Aug 27 19:52:33 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (vtdate2rbtime): try to convert millisecond
	  of VT_DATE VARIANT to nsec of Time object.
	* test/win32ole/test_win32ole_variant.rb
	  (test_conversion_dbl2date_with_msec): ditto.

Wed Aug 27 09:57:29 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_complex.rb: removed unreachable code.
	* test/ruby/test_rational.rb: ditto.

Wed Aug 27 07:59:17 2014  Eric Wong  <e@80x24.org>
